--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -41,21 +41,40 @@ body[dark] {
 
 /* ------------------------------- */
 /* in header */
+.header-links {
+  position: absolute;
+  display: flex;
+  gap: 1rem;
+  margin: 1rem;
+  top: 0;
+  right: 0;
+  --header-link-size: 3rem;
+}
+
+.header-links>button,
+.header-links>a {
+  cursor: pointer;
+  border-radius: 100%;
+  width: var(--header-link-size);
+  height: var(--header-link-size);
+  outline: 3px solid var(--white);
+}
+
+.github-link {
+  background: var(--white);
+}
+
+.github-svg {
+  width: var(--header-link-size);
+  height: var(--header-link-size);
+}
+
 .darkmode-switch {
   background: var(--almost-black);
   color: inherit;
   border: none;
   padding: 0;
   font: inherit;
-  cursor: pointer;
-  outline: inherit;
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin: 1rem;
-  width: 3rem;
-  height: 3rem;
-  border-radius: 100%;
   font-size: large;
 }
 
